@@ -3,6 +3,8 @@ Changelog
 
 5.6-dev - (unreleased)
 ----------------------
+* Change: removed schema extender of location for Data content type 
+  [ichimdav #9423]
 * WIP :: Change: merged values from relatedProducts field to relatedItems
   field for EEAFigure and Data objects.
   [ghicaale refs #2790]
